[#82] suresh/gayatri - Placing player icons at tile corners
What are the changes?

* Changed ratrace tile styling (css)

Why do we need this change?

* To show tile wihout covering it with player icons

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -149,7 +149,8 @@ a {
 .icon {
   border-radius: 50%;
   aspect-ratio: 1;
-  width: 2em;
+  width: 1.8vmax;
+  align-self: center;
   border: var(--def-border);
   z-index: 1;
   transition: 500ms ease;
