--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -170,11 +170,11 @@ a {
 }
 
 .ratrace-tile {
-  border: var(--def-border);
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 0.2vmax;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  column-gap: 30%;
+  justify-items: center;
   position: relative;
 }
 
@@ -183,6 +183,8 @@ a {
   align-items: center;
   row-gap: 0.5vmax;
   position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .ratrace-tile img {
@@ -240,6 +242,8 @@ a {
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(6, 1fr);
 }
+
+
 
 /* Grid element positions START*/
 #rat-tile-3,
