[#88] sai/dileep - Added styles for message-space
What are the changes?

* Added column flex for message-space

Why do we need this change?

* To show multiple notifications

--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -538,11 +538,13 @@ a {
 
 #message-space {
   display: flex;
+  flex-direction: column;
   grid-row: 6;
   grid-column: 1/7;
   font-weight: 600;
   align-items: center;
   justify-content: center;
+  overflow: auto;
 }
 
 /* dice box positions  Start*/
