--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -13,14 +13,6 @@
   overflow: hidden;
 }
 
-#board {
-  display: grid;
-  justify-content: stretch;
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
 #game-panel {
   border: var(--def-border);
   width: 15vw;
@@ -152,21 +144,13 @@ a {
 }
 
 #board-toggle {
-  width: 35%;
-  aspect-ratio: 3;
-  border: var(--def-border);
-  align-self: center;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
+  visibility: hidden;
 }
 
-#board-toggle:hover,
 #pay-loan:hover,
 #take-loan:hover {
   cursor: pointer;
   background-color: var(--grey-p);
-  font-weight: 400;
 }
 
 .ratrace-tile {
@@ -241,6 +225,9 @@ a {
   justify-content: stretch;
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(6, 1fr);
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 
