--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -1,9 +1,12 @@
+body {
+  background-color: #edf0e2;
+}
+
 .page-wrapper {
   padding: 0.5em;
   column-gap: 0.5em;
   height: 100vh;
   width: 100vw;
-  background-color: #edf0e2;
 }
 
 #board-space {
