[#46] dileep/sai - Showing winning message after escaping rat race
What are the changes?

* Added winning popup.
* Added functions for adding and removing classes.

Why do we need this change?

* To show message after escaping rat race

--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -894,3 +894,23 @@ a {
     opacity: 0%;
   }
 }
+
+.escape-popup {
+  height: 10vmax;
+  width: 20vmax;
+  padding: 1vmax;
+  position: absolute;
+  top: 22vmax;
+  left: 33vmax;
+  background-color: aliceblue;
+}
+
+.escape-popup .username {
+  text-align: center;
+  font-size: var(--normal-font);
+}
+
+.escape-popup .button {
+  width: 20%;
+  text-align: center;
+}
