[#85] dileep/sai - Added styles in profile
What are the changes?

* Right aligned the money values
* Showing negative sign before dollar sign

Why do we need this change?

* To show the money to the righto

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -88,6 +88,10 @@ header>h3 {
   padding-top: 0.5vmax;
 }
 
+.profile-wrapper table tbody td {
+  text-align: right;
+}
+
 .profile-wrapper table thead th {
   font-weight: 600;
 }
