--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -61,12 +61,13 @@ a {
 }
 
 #loan-options {
+  height: 4.5%;
   display: flex;
   justify-content: space-evenly;
 }
 
 #loan-options>div {
-  padding: 0.7vmax;
+  padding: 0.5vmax;
   border: var(--def-border)
 }
 
@@ -475,13 +476,15 @@ a {
   flex-direction: column;
   justify-content: space-evenly;
 }
+
 .actions {
   align-self: flex-end;
   width: 100%;
   height: 20%;
   position: absolute;
 }
-.card-heading{
+
+.card-heading {
   margin-top: 0.5vmax;
   text-align: center;
   font-size: var(--normal-font);
@@ -494,10 +497,13 @@ a {
   padding-top: 0.5vmax;
   text-decoration: underline;
 }
-.card-rule, .card-sub-rule{
+
+.card-rule,
+.card-sub-rule {
   width: 100%;
   font-weight: 500;
 }
+
 .card-amount-block {
   width: 100%;
   display: flex;
@@ -505,7 +511,7 @@ a {
   flex-wrap: wrap;
 }
 
-.card-amount-block>div{
+.card-amount-block>div {
   text-align: center;
   min-width: 50%;
   font-weight: 600;
@@ -524,6 +530,7 @@ a {
   display: flex;
   padding: 0.5vmax;
 }
+
 .actions-wrapper .action-btn {
   width: 4vmax;
   border: var(--def-border);
