--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -90,6 +90,7 @@ header>h3 {
 
 .profile-wrapper table tbody td {
   text-align: right;
+  padding-right: 0.5em;
 }
 
 .profile-wrapper table thead th {
