--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -1,10 +1,10 @@
 body {
-  background-color: #edf0e2;
+  background-color: beige;
 }
 
 .page-wrapper {
   padding: 0.5em;
-  column-gap: 0.5em;
+  /* column-gap: 0.5em; */
   height: 100vh;
   width: 100vw;
 }
@@ -18,7 +18,7 @@ body {
 }
 
 #game-panel {
-  border: var(--def-border);
+  border: var(--def-border);  
   width: 15vw;
   height: 100%;
   gap: 1.5vmax;
@@ -27,6 +27,17 @@ body {
 
 #game-panel>header {
   justify-content: center;
+}
+
+#game-panel>header {
+  margin-top: 0.5vmax;
+}
+#game-panel>header a{
+  justify-content: center;
+}
+#game-panel>header img{
+  width: 80%;
+  display: block;
 }
 
 a {
@@ -52,6 +63,7 @@ a {
   border: var(--def-border);
   border-top-left-radius: 1em;
   border-bottom-left-radius: 1em;
+  background: linear-gradient(-60deg, #db5b5b, #ffd795);
   display: flex;
   align-items: center;
   font-size: var(--normal-font);
@@ -67,8 +79,10 @@ a {
 }
 
 #loan-options>div {
+  background: linear-gradient(-60deg, #db5b5b, #ffd795);
   padding: 0.5vmax;
-  border: var(--def-border)
+  border: var(--def-border);
+  border-radius: var(--def-curve);
 }
 
 #logs {
@@ -157,7 +171,7 @@ a {
 #pay-loan:hover,
 #take-loan:hover {
   cursor: pointer;
-  background-color: var(--grey-p);
+  filter: brightness(1.2);
 }
 
 .ratrace-tile {
@@ -420,21 +434,18 @@ a {
 }
 
 #game-stats table {
-  border-spacing: 0.5vmax;
+  border-spacing: 0.5vmax 1vmax;
+  border-collapse: separate;
 }
 
 #game-stats table th {
   max-width: 50%;
-  text-align: right;
+  text-align: left;
 }
 
 #game-stats table td {
   max-width: 50%;
-  text-align: left;
-}
-
-#game-stats table tr {
-  padding: 0.3vmax 0;
+  text-align: right;
 }
 
 .interaction-space {
@@ -668,7 +679,7 @@ a {
 }
 
 .selected-window {
-  background-color: var(--grey-p);
+  filter: brightness(1.25);
 }
 
 .pulsate {
@@ -802,7 +813,7 @@ a {
 }
 
 #game-nav li:hover {
-  background-color: var(--grey-p);
+  filter: brightness(1.3);
 }
 
 /* stocks styles */
