--- a/views/login.html
+++ b/views/login.html
@@ -25,7 +25,7 @@
         </div>
         <div id="message">__MESSAGE__</div>
       </form>
-      <div class="small-font" id="suggestion">Not an user? <a href="/register">Register</a></div>
+      <div class="small-font" id="suggestion">Not an user? <a href="/register" style="color: blue;">Register</a></div>
     </div>
   </div>
 </body>
