--- a/views/register.html
+++ b/views/register.html
@@ -25,7 +25,7 @@
         </div>
         <div id="message">__MESSAGE__</div>
       </form>
-      <div class="small-font" id="suggestion">Already a user ? <a href="/login">Login</a></div>
+      <div class="small-font" id="suggestion">Already a user ? <a href="/login" style="color: blue;">Login</a></div>
     </div>
   </div>
 </body>
