--- a/public/css/common.css
+++ b/public/css/common.css
@@ -24,7 +24,7 @@
   --violet-p: #7145f7;
   --orange-p: #fc880c;
   --grey-p: lightgray;
-  --panel-button:linear-gradient(90deg, #db5b5b, #ffd795);
+  --panel-button:linear-gradient(90deg, #d98817, #f6d407);
 }
 
 * {
